--- a/JoHealth/wwwroot/css/site.css
+++ b/JoHealth/wwwroot/css/site.css
@@ -20,3 +20,11 @@ html {
 body {
   margin-bottom: 60px;
 }
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
+}
+
+.card-text {
+    font-size: 0.9em;
+}
