--- a/JoHealth/Views/Shared/_BottomNavBar.cshtml
+++ b/JoHealth/Views/Shared/_BottomNavBar.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="bottom-nav fixed-bottom bg-light border-top">
+﻿﻿<div class="bottom-nav fixed-bottom bg-light border-top">
     <div class="d-flex justify-content-around py-2">
         <a href="@Url.Action("Index", "Home")" class="nav-link d-flex flex-column align-items-center mx-3 @((ViewData["ActiveNav"] as string) == "Home" ? "active" : "")">
             <i class="bi bi-house-fill"></i>
