--- a/JoHealth/wwwroot/css/site.css
+++ b/JoHealth/wwwroot/css/site.css
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    padding-bottom: 60px;
 }
 .card-img-top {
     height: 200px;
@@ -28,3 +29,7 @@ body {
 .card-text {
     font-size: 0.9em;
 }
+.bottom-nav {
+    height: 60px; /* Example height */
+}
+
